Backend revamped referee functionality to be added